--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,12 @@
 .article__top {
     margin-top: 20px !important;
 }
+
+.w-5.h-5 {
+    display: none;
+}
+
+.custom__pagination {
+    justify-content: center;
+}
+
